# Pay-stylus

./: CONTRACT_INFO.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_INTEGRATION_COMPLETE.md  README.md  VERCEL_BUILD_FIX.md  VERCEL_DEPLOYMENT.md  VERCEL_DIST_FIX.md  VERCEL_ENV_VARS.md  VERCEL_FINAL_FIX.md  VERCEL_OUTPUT_FIX.md  VITE_DEPENDENCY_FIX.md  check-storage.js  create-commits.sh  package-lock.json  package.json  tsconfig.json
smart-contract/: Cargo.toml  README.md  abi.json  lib.rs
src/: App.tsx
src/components/: Layout.tsx  StatsCard.tsx  SubscriptionTracker.tsx  WalletConnect.tsx
src/components/ui/: Card.tsx  Input.tsx  Modal.tsx  Select.tsx
src/contracts/: complete-abi.json  contractconfig.ts  escrowabi.json
src/hooks/: useContract.ts  useWallet.ts
src/lib/: reown.ts
src/pages/: Landing.tsx  Marketplace.tsx  ProviderDashboard.tsx  ProviderOnboarding.tsx  Subscriptions.tsx  TestPage.tsx  Wallet.tsx
src/services/: mockApi.ts
src/types/: index.ts
subgraph/: COMPLETION_SUMMARY.md  WORKING_QUERIES.md  networks.json  package-lock.json  package.json  push-to-github.sh
subgraph/abis/: SubscriptionEscrow.json
subgraph/src/: subscription-escrow.ts
subgraph/tests/: subscription-escrow-utils.ts  subscription-escrow.test.ts
